feat: align API format with BE changes
