# src/app/web-api/models.ts
@@ -2,3 +2,5 @@
 /* eslint-disable */
 export { HabitRequest } from './models/habit-request';
 export { HabitResponse } from './models/habit-response';
+export { HabitTrackRequest } from './models/habit-track-request';
+export { HabitTrackResponse } from './models/habit-track-response';
