# src/app/web-api/models/habit-track-request.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface HabitTrackRequest {
+  date?: string;
+  habitId?: number;
+}
