# src/app/web-api/models/habit-track-response.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface HabitTrackResponse {
+  habitId?: number;
+  habitName?: string;
+  status?: boolean;
+}
